back button and sleep table

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
 
       <div class="row">
-        <div class="col-md-9">
+        <div id="form" class="col-md-9">
           <div class="card card-info">
             <div class="card-header bg-secondary text-white">
               Fill the form
@@ -58,25 +58,56 @@
         </div>
 
 
-        <div class="col-md-3">
+
+        <div id ="check-buttons"class="col-md-3">
           <div class="card card-info">
             <div class="card-header bg-secondary text-white" >
               Dates
             </div>
             <div class="card-body">
-              <button type="button" class="btn btn-primary btn-lg btn-block">Sleep Table</button>
-              <button type="button" class="btn btn-primary btn-lg btn-block">Medication Table</button>
-              <button type="button" class="btn btn-primary btn-lg btn-block">Exercise Table</button>
-              <button type="button" class="btn btn-primary btn-lg btn-block">Food Table</button>
-              <button type="button" class="btn btn-primary btn-lg btn-block">Drink Table</button>
-              <button type="button" class="btn btn-primary btn-lg btn-block">Notes Table</button>
+              <button id="sleep-button" type="button" class="btn btn-primary btn-lg btn-block">Sleep Table</button>
+              <button id="medication-button" type="button" class="btn btn-primary btn-lg btn-block">Medication Table</button>
+              <button id="exercise-button" type="button" class="btn btn-primary btn-lg btn-block">Exercise Table</button>
+              <button  id="food-button" type="button" class="btn btn-primary btn-lg btn-block">Food Table</button>
+              <button  id="drink-button" type="button" class="btn btn-primary btn-lg btn-block">Drink Table</button>
+              <button  id="notes-button" type="button" class="btn btn-primary btn-lg btn-block">Notes Table</button>
             </div>
             <ul id="dates">
             </ul>
           </div>
         </div>
 
-      </div>
+  </div>
+
+        <div id="sleep-table">
+
+
+        <div class="row">
+          <div class="col-md-9">
+              <div class="card card-info">
+                <div class="card-header bg-secondary">
+                  Sleep table
+                </div>
+                <div class="card-body">
+          </div>
+          </div>
+          </div>
+
+
+          <div class="col-md-3">
+            <button id="back-button" class="btn-lg btn-danger" type="button" name="button">Back</button>
+
+          </div>
+
+        </div>
+        </div>
+
+
+
+
+
+
+
 
     </div>
   </body>
