Added getSleep prototype which gets the time-date stamp of journal entries where sleep was filled in

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <button type="button" class="btn btn-primary btn-lg btn-block">Drink Table</button>
               <button type="button" class="btn btn-primary btn-lg btn-block">Notes Table</button>
             </div>
-            <ul id="dates">
+            <ul id="filteredDates">
             </ul>
           </div>
         </div>
