--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
 
       <div class="row">
-        <div id="form" class="col-md-9">
+        <div id="form" class="col-md-8">
           <div class="card card-info">
             <div class="card-header bg-secondary text-white">
               Fill the form
@@ -28,13 +28,13 @@
                 </div>
 
                 <div class="form-group">
-                <label for="medications">Medications</label>
-                <input class = "form-control" type="text" id="medications">
+                  <label for="medications">Medications</label>
+                  <textarea class="form-control" id="medications" rows="3"></textarea>
                 </div>
 
                 <div class="form-group">
-                <label for="exercise">Exercise</label>
-                <input class = "form-control" type="text" id="exercise">
+                  <label for="exercise">Exercise</label>
+                  <textarea class="form-control" id="exercise" rows="3"></textarea>
                 </div>
 
                 <div class="form-group">
@@ -47,8 +47,8 @@
                 </div>
 
                 <div class="form-group">
-                <label for="notes">Notes</label>
-                <input class = "form-control" type="text" id="notes">
+                  <label for="notes">Notes</label>
+                  <textarea class="form-control" id="notes" rows="3"></textarea>
                 </div>
                 <button class= "btn-danger" type="button" name="button">Submit</button>
               </form>
@@ -59,23 +59,39 @@
 
 
 
-        <div id ="check-buttons"class="col-md-3">
+        <div id ="check-buttons"class="col-md-2">
           <div class="card card-info">
             <div class="card-header bg-secondary text-white" >
-              Dates
+              Buttons
             </div>
             <div class="card-body">
-              <button id="sleep-button" type="button" class="btn btn-primary btn-lg btn-block">Sleep Table</button>
-              <button id="medication-button" type="button" class="btn btn-primary btn-lg btn-block">Medication Table</button>
-              <button id="exercise-button" type="button" class="btn btn-primary btn-lg btn-block">Exercise Table</button>
-              <button  id="food-button" type="button" class="btn btn-primary btn-lg btn-block">Food Table</button>
-              <button  id="drink-button" type="button" class="btn btn-primary btn-lg btn-block">Drink Table</button>
-              <button  id="notes-button" type="button" class="btn btn-primary btn-lg btn-block">Notes Table</button>
+              <button id="sleep-button" type="button" class="btn btn-primary btn-sm btn-block">Sleep Table</button>
+              <button id="medication-button" type="button" class="btn btn-primary btn-sm btn-block">Medication Table</button>
+              <button id="exercise-button" type="button" class="btn btn-primary btn-sm btn-block">Exercise Table</button>
+              <button  id="food-button" type="button" class="btn btn-primary btn-sm btn-block">Food Table</button>
+              <button  id="drink-button" type="button" class="btn btn-primary btn-sm btn-block">Drink Table</button>
+              <button  id="notes-button" type="button" class="btn btn-primary btn-sm btn-block">Notes Table</button>
             </div>
-            <ul id="dates">
-            </ul>
+            <!-- <ul id="dates">
+            </ul> -->
           </div>
         </div>
+
+
+        <div id ="dates" class="col-md-2">
+          <div class="card card-info">
+            <div class="card-header bg-secondary text-white">
+             Dates
+            </div>
+            <div class="card-body">
+              <ul id="filteredDates">
+
+              </ul>
+            </div>
+          </div>
+
+        </div>
+      </div>
 
   </div>
 
