--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <div class="form-group">
                   <label for="exercise">Exercise</label>
-                  <textarea class="form-control" id="exercise" rows="3"></textarea>
+                  <textarea class="form-control" type="text" id="exercise" rows="3"></textarea>
                 </div>
 
                 <div class="form-group">
@@ -50,7 +50,7 @@
                   <label for="notes">Notes</label>
                   <textarea class="form-control" id="notes" rows="3"></textarea>
                 </div>
-                <button class= "btn-danger" type="button" name="button">Submit</button>
+                <button class= "btn-danger" type="submit" name="button">Submit</button>
               </form>
             </div>
 
