--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 
 
 
+
+
         <div id ="check-buttons"class="col-md-2">
           <div class="card card-info">
             <div class="card-header bg-secondary text-white" >
@@ -84,7 +86,7 @@
              Dates
             </div>
             <div class="card-body">
-              <ul id="filteredDates">
+              <ul id="all-dates">
 
               </ul>
             </div>
@@ -117,7 +119,23 @@
 
         </div>
         </div>
+        <div id="show-template">
+          <div class="row">
+            <div class="col-md-9">
+              <div class="card card-info">
+                <div class="card-header bg-primary">
+                  Your template  for <p><span id="display-date"></span></p>:
 
+                </div>
+                <div class="card-header">
+
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
 
 
 
