--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                 <label for="drink">Drink</label>
                 <input class="form-control" type="text" id="drink">
               </div>
-
               <div class="form-group">
                 <label for="notes">Notes</label>
                 <textarea class="form-control" id="notes" rows="3"></textarea>
@@ -56,14 +55,8 @@
               <button class="btn-danger" type="submit" name="button">Submit</button>
             </form>
           </div>
-
         </div>
       </div>
-
-
-
-
-
       <div id="check-buttons" class="col-md-2">
         <div class="card card-info">
           <div class="card-header bg-secondary text-white">
@@ -77,8 +70,7 @@
             <button id="drink-button" type="button" class="btn btn-primary btn-sm btn-block">Drink Table</button>
             <button id="notes-button" type="button" class="btn btn-primary btn-sm btn-block">Notes Table</button>
           </div>
-          <!-- <ul id="dates">
-            </ul> -->
+
         </div>
       </div>
 
@@ -90,19 +82,13 @@
           </div>
           <div class="card-body">
             <ul id="all-dates">
-
             </ul>
           </div>
         </div>
-
       </div>
     </div>
-
   </div>
-
   <div id="sleep-table">
-
-
     <div class="row">
       <div class="col-md-9">
         <div class="card card-info">
@@ -113,13 +99,9 @@
           </div>
         </div>
       </div>
-
-
       <div class="col-md-3">
         <button id="back-button" class="btn-lg btn-danger" type="button" name="button">Back</button>
-
       </div>
-
     </div>
   </div>
   <div id="show-template">
@@ -128,15 +110,15 @@
         <div class="card card-info">
           <div class="card-header bg-primary">
             Your template for <p><span id="display-date"></span></p>:
-
           </div>
           <div class="card-header">
-
           </div>
         </div>
-
       </div>
 
+      <div class="col-md-3">
+        <button id="go-back-button" class="btn-lg btn-danger" type="button" name="button">Go Back</button>
+      </div>
     </div>
   </div>
 
