display datas we have in js 'monday1' 'monday2'

--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
         <div class="card card-info">
           <div class="card-header bg-primary">
             Your template for <p><span id="display-date"></span></p>:
+            <p><span class="sleep"></span></p>
+            <p><span class="medications"></span></p>
+            <p><span class="exercises"></span></p>
+            <p><span class="food"></span></p>
+            <p><span class="drink"></span></p>
+            <p><span class="general"></span></p>
           </div>
           <div class="card-header">
           </div>
