--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/jquery-3.4.0.js"></script>
@@ -15,10 +18,13 @@
   <div class="container">
     <div class="jumbotron">
       <h1>Health Journal</h1>
+      <div class="center">
+        <div class="heart"></div>
+      </div>
     </div>
 
     <div class="row">
-      <div id="form" class="col-md-8">
+      <div id="form" class="col-md-7">
         <div class="card card-info">
           <div class="card-header bg-secondary text-white">
             Fill the form
@@ -75,7 +81,7 @@
       </div>
 
 
-      <div id="dates" class="col-md-2">
+      <div id="dates" class="col-md-3">
         <div class="card card-info">
           <div class="card-header bg-secondary text-white">
             Dates
@@ -89,7 +95,7 @@
     </div>
   </div>
   <div id="sleep-table">
-    <div class="row">
+    <div class="row" id="sleep-table-row">
       <div class="col-md-9">
         <div class="card card-info">
           <div class="card-header bg-secondary">
@@ -100,7 +106,23 @@
         </div>
       </div>
       <div class="col-md-3">
-        <button id="back-button" class="btn-lg btn-danger" type="button" name="button">Back</button>
+        <button id="sleep-back-button" class="btn-lg btn-danger back-button-class" type="button" name="button">Back</button>
+      </div>
+    </div>
+  </div>
+  <div id="medication-table">
+    <div class="row" id="medication-table-row">
+      <div class="col-md-9">
+        <div class="card card-info">
+          <div class="card-header bg-secondary">
+            Medication table
+          </div>
+          <div class="card-body">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <button id="medication-back-button" class="btn-lg btn-danger back-button-class" type="button" name="button">Back</button>
       </div>
     </div>
   </div>
