table for check buttons

--- a/index.html
+++ b/index.html
@@ -126,6 +126,70 @@
       </div>
     </div>
   </div>
+  <div id="exercise-table">
+    <div class="row" id="exercise-table-row">
+      <div class="col-md-9">
+        <div class="card card-info">
+          <div class="card-header bg-secondary">
+            Exercise table
+          </div>
+          <div class="card-body">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <button id="exercise-back-button" class="btn-lg btn-danger back-button-class" type="button" name="button">Back</button>
+      </div>
+    </div>
+  </div>
+  <div id="food-table">
+    <div class="row" id="food-table-row">
+      <div class="col-md-9">
+        <div class="card card-info">
+          <div class="card-header bg-secondary">
+            Food table
+          </div>
+          <div class="card-body">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <button id="food-back-button" class="btn-lg btn-danger back-button-class" type="button" name="button">Back</button>
+      </div>
+    </div>
+  </div>
+  <div id="drink-table">
+    <div class="row" id="drink-table-row">
+      <div class="col-md-9">
+        <div class="card card-info">
+          <div class="card-header bg-secondary">
+            Drink table
+          </div>
+          <div class="card-body">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <button id="drink-back-button" class="btn-lg btn-danger back-button-class" type="button" name="button">Back</button>
+      </div>
+    </div>
+  </div>
+  <div id="notes-table">
+    <div class="row" id="notes-table-row">
+      <div class="col-md-9">
+        <div class="card card-info">
+          <div class="card-header bg-secondary">
+            Notes table
+          </div>
+          <div class="card-body">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <button id="notes-back-button" class="btn-lg btn-danger back-button-class" type="button" name="button">Back</button>
+      </div>
+    </div>
+  </div>
   <div id="show-template">
     <div class="row">
       <div class="col-md-9">
