template for dates table

--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
       <div class="col-md-9">
         <div class="card card-info">
           <div class="card-header bg-primary">
-            Your template for <p><span id="display-date"></span></p>:
-            <p><span class="sleep"></span></p>
-            <p><span class="medications"></span></p>
-            <p><span class="exercises"></span></p>
-            <p><span class="food"></span></p>
-            <p><span class="drink"></span></p>
-            <p><span class="general"></span></p>
+            Your template for :<p><span id="display-date"></span></p>
+            <p>Sleep:<span class="sleep"></span></p>
+            <p>Medications:<span class="medications"></span></p>
+            <p>Exercises:<span class="exercises"></span></p>
+            <p>Food:<span class="food"></span></p>
+            <p>Beverages:<span class="drink"></span></p>
+            <p>Notes:<span class="general"></span></p>
           </div>
           <div class="card-header">
           </div>
