now gets sleep entries correctly

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
             Sleep table
           </div>
           <div class="card-body">
+            <ul id="filteredDates">
+            </ul>
           </div>
         </div>
       </div>
