Now correctly lists medications when medication table button is pushed

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             Sleep table
           </div>
           <div class="card-body">
-            <ul id="filteredDates">
+            <ul id="filteredSleepDates">
             </ul>
           </div>
         </div>
@@ -120,6 +120,7 @@
             Medication table
           </div>
           <div class="card-body">
+            <ul id="filteredMedicationsDates"></ul>
           </div>
         </div>
       </div>
