replaced li with div for the buttons

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
           <div class="scrollbar scrollbar-primary">
             <div class="force-overflow">
               <div class="card-body">
-                <ul id="all-dates">
-                </ul>
+                <div id="all-dates">
+                </div>
               </div>
             </div>
           </div>
@@ -117,8 +117,9 @@
             Sleep table
           </div>
           <div class="card-body">
-            <ul id="filteredSleepDates">
-            </ul>
+            <!-- <table id="filteredSleepDates"></table> -->
+            <div id="filteredSleepDates"></div>
+
           </div>
         </div>
       </div>
@@ -135,7 +136,7 @@
             Medication table
           </div>
           <div class="card-body">
-            <ul id="filteredMedicationsDates"></ul>
+            <div id="filteredMedicationsDates"></div>
           </div>
         </div>
       </div>
@@ -152,7 +153,7 @@
             Exercise table
           </div>
           <div class="card-body">
-            <ul id="filteredExercisesDates"></ul>
+            <div id="filteredExercisesDates"></div>
           </div>
         </div>
       </div>
@@ -169,7 +170,7 @@
             Food table
           </div>
           <div class="card-body">
-            <ul id="filteredFoodDates"></ul>
+            <div id="filteredFoodDates"></div>
           </div>
         </div>
       </div>
@@ -186,7 +187,7 @@
             Drink table
           </div>
           <div class="card-body">
-            <ul id="filteredDrinkDates"></ul>
+            <div id="filteredDrinkDates"></div>
           </div>
         </div>
       </div>
@@ -203,7 +204,7 @@
             Notes table
           </div>
           <div class="card-body">
-            <ul id="filteredGeneralDates"></ul>
+            <div id="filteredGeneralDates"></div>
           </div>
         </div>
       </div>
