--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -80,12 +81,12 @@
             Buttons
           </div>
           <div class="card-body">
-            <button id="sleep-button" type="button" class="btn btn-primary btn-sm btn-block">Sleep Table</button>
-            <button id="medication-button" type="button" class="btn btn-primary btn-sm btn-block">Medication Table</button>
-            <button id="exercise-button" type="button" class="btn btn-primary btn-sm btn-block">Exercise Table</button>
-            <button id="food-button" type="button" class="btn btn-primary btn-sm btn-block">Food Table</button>
-            <button id="drink-button" type="button" class="btn btn-primary btn-sm btn-block">Drink Table</button>
-            <button id="notes-button" type="button" class="btn btn-primary btn-sm btn-block">Notes Table</button>
+            <button id="sleep-button" type="button" class="btn btn-light text-black btn-sm btn-block">Sleep Table</button>
+            <button id="medication-button" type="button" class="btn btn-light text-black btn-sm btn-block">Medication Table</button>
+            <button id="exercise-button" type="button" class="btn btn-light  text-black btn-sm btn-block">Exercise Table</button>
+            <button id="food-button" type="button" class="btn btn-light text-black btn-sm btn-block">Food Table</button>
+            <button id="drink-button" type="button" class="btn btn-light text-black  btn-sm btn-block">Drink Table</button>
+            <button id="notes-button" type="button" class="btn btn-light text-black btn-sm btn-block">Notes Table</button>
           </div>
 
         </div>
@@ -96,7 +97,7 @@
           <div class="card-header bg-secondary text-white">
             Dates
           </div>
-          <div class="scrollbar scrollbar-primary">
+          <div class="scrollbar scrollbar-dark">
             <div class="force-overflow">
               <div class="card-body">
                 <ul id="all-dates">
@@ -117,6 +118,9 @@
             Sleep table
           </div>
           <div class="card-body">
+          <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+
+            </div>
             <ul id="filteredSleepDates">
             </ul>
           </div>
